// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PersonalSettings.vue > user settings > admin and user should be able to enable and disable the setting simultaneously: oauth2 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--link"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--link"
    >
      Enable navigation link
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Displays a link to your OpenProject instance in the Nextcloud header.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    
  </div>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--u-search"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--u-search"
    >
      Enable unified search for tickets
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Allows you to search OpenProject work packages via the universal search bar in Nextcloud.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    <p
      class="openproject-prefs--hint"
      data-v-817ddb89=""
    >
      <span
        aria-hidden="true"
        class="material-design-icon information-variant-icon"
        data-v-817ddb89=""
        role="img"
      >
        <svg
          class="material-design-icon__svg"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
          >
            <!--v-if-->
          </path>
        </svg>
      </span>
       Warning, everything you type in the search bar will be sent to your OpenProject instance.
    </p>
    
  </div>
</div>
`;

exports[`PersonalSettings.vue > user settings > admin and user should be able to enable and disable the setting simultaneously: oauth2 2`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--link"
      type="checkbox"
      value="false"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--link"
    >
      Enable navigation link
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Displays a link to your OpenProject instance in the Nextcloud header.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    
  </div>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--u-search"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--u-search"
    >
      Enable unified search for tickets
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Allows you to search OpenProject work packages via the universal search bar in Nextcloud.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    <p
      class="openproject-prefs--hint"
      data-v-817ddb89=""
    >
      <span
        aria-hidden="true"
        class="material-design-icon information-variant-icon"
        data-v-817ddb89=""
        role="img"
      >
        <svg
          class="material-design-icon__svg"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
          >
            <!--v-if-->
          </path>
        </svg>
      </span>
       Warning, everything you type in the search bar will be sent to your OpenProject instance.
    </p>
    
  </div>
</div>
`;

exports[`PersonalSettings.vue > user settings > admin and user should be able to enable and disable the setting simultaneously: oidc 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--link"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--link"
    >
      Enable navigation link
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Displays a link to your OpenProject instance in the Nextcloud header.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    
  </div>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--u-search"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--u-search"
    >
      Enable unified search for tickets
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Allows you to search OpenProject work packages via the universal search bar in Nextcloud.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    <p
      class="openproject-prefs--hint"
      data-v-817ddb89=""
    >
      <span
        aria-hidden="true"
        class="material-design-icon information-variant-icon"
        data-v-817ddb89=""
        role="img"
      >
        <svg
          class="material-design-icon__svg"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
          >
            <!--v-if-->
          </path>
        </svg>
      </span>
       Warning, everything you type in the search bar will be sent to your OpenProject instance.
    </p>
    
  </div>
</div>
`;

exports[`PersonalSettings.vue > user settings > admin and user should be able to enable and disable the setting simultaneously: oidc 2`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--link"
      type="checkbox"
      value="false"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--link"
    >
      Enable navigation link
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Displays a link to your OpenProject instance in the Nextcloud header.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    
  </div>
  <div
    class="form-check-input"
    data-v-817ddb89=""
    data-v-c5be97c2=""
  >
    <input
      checked=""
      class="checkbox"
      data-v-c5be97c2=""
      id="openproject-prefs--u-search"
      type="checkbox"
      value="true"
    />
    <label
      data-v-c5be97c2=""
      for="openproject-prefs--u-search"
    >
      Enable unified search for tickets
    </label>
    
    <p
      class="user-setting-description"
      data-v-817ddb89=""
    >
      Allows you to search OpenProject work packages via the universal search bar in Nextcloud.
    </p>
    <!-- eslint-disable-line vue/no-v-html -->
    <p
      class="openproject-prefs--hint"
      data-v-817ddb89=""
    >
      <span
        aria-hidden="true"
        class="material-design-icon information-variant-icon"
        data-v-817ddb89=""
        role="img"
      >
        <svg
          class="material-design-icon__svg"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
          >
            <!--v-if-->
          </path>
        </svg>
      </span>
       Warning, everything you type in the search bar will be sent to your OpenProject instance.
    </p>
    
  </div>
</div>
`;

exports[`PersonalSettings.vue > user settings > should be disabled if the admin has not enabled the settings: oauth2 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--link"
    label="Enable navigation link"
    modelvalue="false"
  />
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--u-search"
    label="Enable unified search for tickets"
    modelvalue="false"
  />
</div>
`;

exports[`PersonalSettings.vue > user settings > should be disabled if the admin has not enabled the settings: oidc 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--link"
    label="Enable navigation link"
    modelvalue="false"
  />
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--u-search"
    label="Enable unified search for tickets"
    modelvalue="false"
  />
</div>
`;

exports[`PersonalSettings.vue > user settings > should be enabled if the admin has enabled the settings: oauth2 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--link"
    label="Enable navigation link"
    modelvalue="true"
  />
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--u-search"
    label="Enable unified search for tickets"
    modelvalue="true"
  />
</div>
`;

exports[`PersonalSettings.vue > user settings > should be enabled if the admin has enabled the settings: oidc 1`] = `
<div
  class="openproject-prefs--form"
  data-v-817ddb89=""
>
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--link"
    label="Enable navigation link"
    modelvalue="true"
  />
  <check-box-stub
    data-v-817ddb89=""
    inputid="openproject-prefs--u-search"
    label="Enable unified search for tickets"
    modelvalue="true"
  />
</div>
`;
